--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -112,12 +112,19 @@ body{
         }
 
         .section_dos--article{
-          width: 100%;
+          width: auto;
           text-align: center;
           .section_dos--articleTitle{
           font-size: 36px;
         }
       }
+      .section_uno--article{
+        width: auto;
+        text-align: center;
+        .section_uno--articleTitle{
+        font-size: 36px;
+      }
+    }
             }
         
             
@@ -153,6 +160,8 @@ body{
           }
 
           }
+
+          article{text-align: center;}
 
             }
 
